compiler/tests/snapshots/cli_run_cranelift__run_cranelift_for_unsupported.snap
---
source: tests/cli_run_cranelift.rs
expression: snapshot_view(&result)
---
status: 1
--- stdout ---
--- stderr ---
codegen::llvm

  × LLVM error: `for` loops are not yet supported by the Cranelift backend
