compiler/tests/snapshots/cli_run_cranelift__run_cranelift_hello.snap
---
source: tests/cli_run_cranelift.rs
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
Compiled to <TEMP_EXE>
Hello, Momiji!
--- stderr ---
